# reikan

./: CONTRIBUTING.ja.md  CONTRIBUTING.md  README.ja.md  README.md
.github/ISSUE_TEMPLATE/: adr.md  bug.md  rfc.md
assets/: README.md
docs/: README.ja.md  README.md  architecture-outline.ja.md  architecture-outline.md
docs/adr/: README.md
docs/design/: README.md  security-autonomous-defense.ja.md  security-autonomous-defense.md  supply-chain-package-management.ja.md  supply-chain-package-management.md
docs/rfc/: README.md
kernel/: Cargo.toml  README.ja.md  README.md  linker.ld
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.S  mod.rs  serial.rs  vga.rs
lang/: README.md
lang/spec/reikan-lang/: README.md  ast-nodes.md  formatter-v0.1.md  grammar-v0.1.md  overview.md  type-system-v0.1.md
lang/spec/reikan-lang/samples/: README.md
lang/spec/reikan-lang/samples/cli/: cli.logic  cli.res  cli.test  cli.type
lang/spec/reikan-lang/samples/domain/: user.logic  user.obs  user.res  user.spec  (+2 more)
research/: README.ja.md  README.md
research/aios/: aios.ja.md  aios.md
research/cross-platform-isolation/: cross-platform-isolation.ja.md  cross-platform-isolation.md
research/fuchsia/: fuchsia.ja.md  fuchsia.md
research/mojo/: mojo.ja.md  mojo.md
research/redox-os/: redox-os.ja.md  redox-os.md
research/sel4/: sel4.ja.md  sel4.md
research/theseus-os/: theseus-os.ja.md  theseus-os.md
runtime/: README.md
scripts/: README.md  build-iso.sh
spec/: README.md
tests/: README.md
tools/: README.md
(+5 files in other folders)
